update cep reader